correctif de l'alignement des onglets de la nav

--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -23,7 +23,7 @@ header {
             color: settings.$background-color;
             font-size: 6rem;
             font-weight: normal;
-            padding: 0 10px;
+            padding: 0 30px;
             background-color: rgba(0, 0, 0, 0.05);
             @media (min-width: 768px) and (max-width: 1024px) {
                 font-size: 4rem;
@@ -56,7 +56,7 @@ header {
 
     nav {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: auto 1fr 1fr 1fr 1fr 1fr;
         align-items: center;
         background: rgba(255, 255, 255, 0.23);
         border-radius: 25px 25px 0 0;
@@ -128,6 +128,7 @@ header {
         }
     }
 
+    // style des icones du menu burger
     .menu {
         display: none;
         position: absolute;
